# paper-daily

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.md  pyproject.toml
src/paper_daily/: cli.py  config.py
src/paper_daily/core/: calendar.py  config_store.py  llm.py
src/paper_daily/pipeline/: arxiv.py  deep_reviewer.py  formatter.py  pdf_fetcher.py  scorer.py  summarizer.py
src/paper_daily/prompts/: deep_review.py  formatter.py  scoring.py  summarizing.py
src/paper_daily/ui/: app.py  app.tcss  widgets.py
src/paper_daily/ui/screens/: keywords.py  main_menu.py  report_running.py  results.py  running.py  settings.py  wizard.py
